[package]
name = "BC26"
version = "0.1.0"
authors = ["CNLHC <cn_lhc@qq.com>"]
edition = "2018"

[lib]
name = "BC26"
crate-type = ["staticlib"]

[features]
armv7m = []
unix = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

heapless="0.5.1"
bitflags = "1.0"
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
cc="1.0"




[profile.release]
opt-level = 's' # or 'z'
panic = 'abort'



